--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply h-[100vh] w-[100vw] bg-primary relative p-7;
+  @apply h-full w-full bg-primary p-6
 }
 
 p, h1, h2, div {
@@ -12,6 +12,14 @@ p, h1, h2, div {
 
 h1{
   @apply text-h1 font-bold mb-4;
+}
+
+h2{
+  @apply text-h2 font-bold mb-4;
+}
+
+h3{
+  @apply text-h3 font-bold mb-4;
 }
 
 p {
